# construction-cost

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
housing_cost/: __init__.py  config.py  dataset.py  features.py  pdf.py  plots.py
housing_cost/modeling/: predict.py  train.py
housing_cost/process/: __init__.py  process_construction_cost.py  process_cost_breakdown.py  process_cost_history.py  process_median_income.py
notebooks/: 1.0-lv-construction-cost-2024.py  1.0-lv-cost-breakdown.py  1.0-lv-cost-history-2024.py  1.0-lv-household-income.py  2.0-lv-normalized-costs.py
