[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "housing_cost"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "LatentVectors" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["housing_cost"]
include = ["pyproject.toml", "housing_cost/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["housing_cost"]
force-sort-within-sections = true

